// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`styled creates a styled component from dot notation element id 1`] = `
<div>
  <div
    class="element-2313942302"
  />
</div>
`;

exports[`styled creates a styled component from string element id 1`] = `
<div>
  <div
    class="element-2313942302"
  />
</div>
`;

exports[`styled passes through html attributes 1`] = `
<div>
  <div
    class="element-2313942302"
    data-testid="foo"
  />
</div>
`;

exports[`styled passes through modifier props 1`] = `
<div>
  <div
    class="element-2313942302 element-2313942302--primary-2402939536"
  />
</div>
`;

exports[`styled passes through multiple modifier props 1`] = `
<div>
  <div
    class="element-2313942302 element-2313942302--primary-2402939536 element-2313942302--secondary-3026956261"
  />
</div>
`;
